--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "sistema-ponto-server",
+  "name": "sistema-ponto-completo",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "cd server && npm start",
+    "dev": "cd server && npm run dev",
+    "install-server": "cd server && npm install",
+    "install-all": "npm install && npm run install-server"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1"
+    "serve": "^14.0.0"
   }
 }
