--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "sistema-ponto-completo",
+  "name": "sistema-ponto-server",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "cd server && npm start",
-    "dev": "cd server && npm run dev",
-    "install-server": "cd server && npm install",
-    "install-all": "npm install && npm run install-server"
+    "start": "node server.js"
   },
   "dependencies": {
-    "serve": "^14.0.0"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1"
   }
 }
