--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "sistema-ponto-eletronico",
-  "version": "2.1.0",
-  "description": "Sistema de ponto eletrônico online com área de perfil",
+  "version": "2.2.0",
+  "description": "Sistema de ponto eletrônico online com área administrativa",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["ponto", "eletronico", "registro", "horarios", "perfil"],
+  "keywords": ["ponto", "eletronico", "registro", "horarios", "perfil", "admin"],
   "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "bcrypt": "^5.1.0"
+    "bcrypt": "^5.1.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
