--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "sistema-ponto-eletronico",
-  "version": "2.2.0",
-  "description": "Sistema de ponto eletrônico online com área administrativa",
+  "version": "4.0.0",
+  "description": "Sistema de ponto eletrônico online",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["ponto", "eletronico", "registro", "horarios", "perfil", "admin"],
-  "author": "Seu Nome",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
