--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "sistema-ponto-eletronico",
-  "version": "4.0.0",
-  "description": "Sistema de ponto eletrônico online",
+  "name": "sistema-ponto",
+  "version": "2.0.0",
+  "description": "Sistema de registro de ponto online",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "ponto",
+    "registro",
+    "nodejs",
+    "postgresql"
+  ],
+  "author": "Seu Nome",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.1"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
