--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sistema-ponto",
-  "version": "2.0.0",
-  "description": "Sistema de registro de ponto online",
+  "version": "2.1.0",
+  "description": "Sistema de registro de ponto online com upload de fotos",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -12,7 +12,8 @@
     "ponto",
     "registro",
     "nodejs",
-    "postgresql"
+    "postgresql",
+    "upload"
   ],
   "author": "Seu Nome",
   "license": "MIT",
@@ -20,7 +21,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
