--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
     "pg": "^8.11.0",
-    "multer": "^1.4.5"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
