--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
   "name": "sistema-ponto",
-  "version": "2.1.0",
-  "description": "Sistema de registro de ponto online com upload de fotos",
+  "version": "2.0.0",
+  "description": "Sistema de registro de ponto online",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "ponto",
-    "registro",
-    "nodejs",
-    "postgresql",
-    "upload"
-  ],
-  "author": "Seu Nome",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "pg": "^8.11.0",
-    "multer": "^1.4.5-lts.1"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
