--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sistema-ponto",
   "version": "2.0.0",
-  "description": "Sistema de registro de ponto online",
+  "description": "Sistema de controle de ponto eletrônico",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,9 +11,11 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "pg": "^8.11.0"
+    "pg": "^8.8.0",
+    "exceljs": "^4.3.0",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.20"
   }
 }
